# gamemachine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
coding/: CMakeLists.txt
coding/demo/: CMakeLists.txt  demostration_world.cpp  demostration_world.h  main.cpp  stdafx.h
coding/demo/demo/: simple.cpp  simple.h
coding/fglextlib/: common.h  stdafx.h
coding/fglextlib/containers/: basic_containers.cpp  basic_containers.h
coding/fglextlib/gameloop/: gameloop.cpp  gameloop.h
coding/fglextlib/imagereader/: imagereader.cpp  imagereader.h  imagereaderprivate.cpp  imagereaderprivate.h
coding/fglextlib/io/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
coding/fglextlib/objreader/: mtlreader.cpp  mtlreader.h  mtlreader_private.cpp  mtlreader_private.h  mtlreaderprivate.cpp  mtlreaderprivate.h  objreader.cpp  objreader.h  objreader_private.cpp  objreader_private.h  objreaderprivate.cpp  objreaderprivate.h
coding/fglextlib/utilities/: assert.cpp  assert.h  camera.cpp  camera.h  path.cpp  path.h  scanner.cpp  scanner.h  stopwatch.cpp  stopwatch.h
coding/gamemachine/: CMakeLists.txt  common.h  stdafx.h
coding/gamemachine/containers/: basic_containers.cpp  basic_containers.h
coding/gamemachine/core/: objstruct.h
coding/gamemachine/gameloop/: gameloop.cpp  gameloop.h
coding/gamemachine/gamescene/: character.cpp  character.h  gameobject.cpp  gameobject.h  gameobjectprivate.cpp  gameobjectprivate.h  gameworld.cpp  gameworld.h  gameworldprivate.cpp  gameworldprivate.h
coding/gamemachine/gl/: shaders.h
coding/gamemachine/gmgl/: gmgl_func.cpp  gmgl_func.h  shaders.h
coding/gamemachine/imagereader/: imagereader.h  imagereaderprivate.cpp  imagereaderprivate.h
coding/gamemachine/include/: defines.h  dsound_gm.h  gamemachine.h  gm2dgameobject.h  gmbsp.h  gmbspgameworld.h  gmbspmodelloader.h  gmbspphysicsworld.h  gmcamera.h  gmcom.h  gmcontrolgameobject.h  gmgamepackage.h  gmgl.h  gmimage.h  gmimagebuffer.h  gmimagereader.h  gminput.h  gmlua.h  gmmodel.h  gmmodelreader.h  gmparticles.h  gmprimitivecreator.h  gmresourcecontainer.h  gmshader.h  input.h  linearmath.h  shader.h  utilities.h
coding/gamemachine/objreader/: mtlreader.h  mtlreaderprivate.cpp  mtlreaderprivate.h  objreader.cpp  objreader.h  objreaderprivate.cpp  objreaderprivate.h
coding/gamemachine/src/: CMakeLists.txt  common.h  empty_template.h  stdafx.h
coding/gamemachine/utilities/: assert.h  camera.cpp  camera.h  photographer.h  scanner.cpp  stopwatch.cpp  stopwatch.h
coding/gamemachinedemo/: CMakeLists.txt  demostration_world.cpp  demostration_world.h  main.cpp
coding/gamemachinedemo/demo/: animation.cpp  animation.h  border.cpp  border.h  button.cpp  button.h  effects.cpp  literature.cpp  literature.h  model.cpp  model.h  normalmap.cpp  normalmap.h  particles1.cpp  particles1.h  particles2.cpp  particles2.h  quake3_bsp.cpp  quake3_bsp.h  rotation.cpp  rotation.h  simple.cpp  simple.h  sound.cpp  sound.h  texture.cpp  texture.h
coding/gamemachinemedia/: CMakeLists.txt  common.h  stdafx.h
coding/gamemachinemedia/include/: gmm.h  gmmaudioreader.h
coding/gamemachineui/: CMakeLists.txt  stdafx.h
coding/gamemachineui/include/: gmui.h  gmuicommon.h
coding/gamemachineunittest/: CMakeLists.txt  main.cpp  static_tests.cpp  unittestcase.cpp
coding/gamemachineunittest/cases/: hook.cpp  hook.h
src/: CMakeLists.txt
src/demo/gamemachinecompute/: CMakeLists.txt
src/demo/gamemachinedemo/: CMakeLists.txt  demonstration_world.cpp  demonstration_world.h  main.cpp
src/demo/gamemachinedemo_window/: CMakeLists.txt  main.cpp  main.rc
src/demo/gamemachineexplorer/: CMakeLists.txt  main.cpp  stdafx.h
src/demo/gamemachineluademo/: CMakeLists.txt  main.cpp
src/demo/gamemachinerunner/: CMakeLists.txt  main.cpp
src/demo/gamemachinesimple/: CMakeLists.txt  main.cpp
src/demo/premiere/: CMakeLists.txt  Resource.rc  handler.cpp  handler.h  helper.cpp  helper.h  main.cpp  procedures.cpp  procedures.h  timeline.cpp  timeline.h
src/gamemachine/: CMakeLists.txt
src/gamemachine/include/: dx11wrapper.h  gamemachine.h  glew.h  gmanimation.h  gmassets.h  gmasync.h  gmbsp.h  gmbspfactory.h  gmbuffer.h  gmbullethelper.h  gmcanvas.h  gmcommon.h  gmconstraint.h  gmcontrollabel.h  gmcontrolpanel.h  gmcontroltextedit.h  gmdemogameworld.h  gmdiscretedynamicsworld.h  gmdx11.h  gmdx11framebuffer.h  gmdx11helper.h  gmdx11technique.h  gmdxincludes.h  gmeffectgameobject.h  gmeffectreader.h  gmenums.h  gmfontmetrics.h  gmgameobject.h  gmgameworld.h  gmgbuffer.h  gmgl.h  gmglhelper.h  gmgltechnique.h  gmglyphmanager.h  gmgraphicengine.h  gmimage.h  gminterfaces.h  gmlight.h  gmlua.h  gmmemory.h  (+31 more)
src/gamemachine/src/: CMakeLists.txt  common.h  empty_template.cpp  stdafx.h
src/gamemachinecompute/: CMakeLists.txt  main.cpp
src/gamemachinedemo/: CMakeLists.txt  demonstration_world.cpp  demonstration_world.h  demostration_world.cpp  demostration_world.h  main.cpp
src/gamemachinedemo/demo/: animation.cpp  animation.h  assimp.cpp  async.cpp  async.h  border.cpp  border.h  button.cpp  button.h  collision.cpp  collision.h  controls.cpp  csm.cpp  csm.h  customlight.cpp  customlight.h  customshader.cpp  customshader.h  effects.cpp  effects.h  hdr.cpp  hdr.h  light.cpp  light.h  literature.cpp  literature.h  lua.cpp  lua.h  md5mesh.cpp  md5mesh.h  model.cpp  model.h  normalmap.cpp  normalmap.h  particle.cpp  particle.h  particles1.cpp  particles1.h  particles2.cpp  pbr.cpp  (+17 more)
src/gamemachinedemo_window/: CMakeLists.txt  main.cpp  resource.h
src/gamemachineexplorer/: CMakeLists.txt  empty_template.h  gmecommon.h  main.cpp
src/gamemachineluademo/: CMakeLists.txt  main.cpp  stdafx.h
src/gamemachinemedia/: CMakeLists.txt  common.h  stdafx.h
src/gamemachineqt/: CMakeLists.txt
src/gamemachinerunner/: CMakeLists.txt  main.cpp  stdafx.h
src/gamemachinesimple/: CMakeLists.txt  demostration_world.cpp  demostration_world.h  main.cpp
src/gamemachineui/: CMakeLists.txt  common.h  stdafx.h
src/gamemachineunittest/: CMakeLists.txt  main.cpp  static_tests.cpp  stdafx.h  unittest_def.h  unittestcase.cpp  unittestcase.h
(+1626 files in other folders)
